wcfsetup/install/files/style/ui/tooltip.scss
.balloonTooltip {
	background-color: $wcfTooltipBackground;
	border-radius: 2px;
	box-shadow: 0 0 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24);
	color: $wcfTooltipText;
	max-width: 300px;
	padding: 5px 10px;
	pointer-events: none;
	position: absolute;
	top: 0;
	transition: visibility 0s linear .12s;
	visibility: hidden;
	z-index: 800;
	
	@include wcfFontSmall;
	
	> .elementPointer {
		display: none;
	}
	
	&.active {
		visibility: visible;
		
		transition-delay: 0s;
	}
	
	&.interactive {
		pointer-events: all;
		
		> span {
			cursor: pointer;
			
			&:not(:first-child) {
				border-left: 1px solid $wcfTooltipText;
				margin-left: 10px;
				padding-left: 10px;
			}
		}
	}
}

